// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot 1`] = `
<header
  className="sc-bwzfXH kGqwtf"
>
  <h1
    className="sc-bdVaJa bUEgTO"
  >
    My Movies
  </h1>
</header>
`;

exports[`Main component should match empty snapshot 1`] = `
<main>
  <div
    className="sc-htpNat VPkom"
  >
    Movies now playing
  </div>
  <div>
    <label>
      Choose a minimum rating: 
    </label>
    <select
      className="sc-bxivhb jUndbY"
      onChange={[Function]}
      value={0}
    >
      <option
        value="0"
      >
        none
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={5.5}
      >
        5.5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={6.5}
      >
        6.5
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={7.5}
      >
        7.5
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={8.5}
      >
        8.5
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={9.5}
      >
        9.5
      </option>
      <option
        value={10}
      >
        10
      </option>
    </select>
  </div>
  <div
    className="sc-EHOje dgfsxR"
  />
  <footer
    className="sc-bZQynM jTTzqW"
  >
    <img
      alt="tmdb logo"
      className="sc-gzVnrw bylXzw"
      src="tmdb-logo.png"
    />
    <div
      className="sc-htoDjs hXIZpn"
    >
      This product uses the TMDb API but is not endorsed or certified by TMDb.
    </div>
  </footer>
</main>
`;

exports[`Main component should match snapshot with min rating 1`] = `
<main>
  <div
    className="sc-jzJRlG gMGYdn"
  >
    Movies now playing
  </div>
  <div>
    <label>
      Choose a minimum rating: 
    </label>
    <select
      className="sc-cSHVUG jjSnWe"
      onChange={[Function]}
      value={8}
    >
      <option
        value="0"
      >
        none
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={5.5}
      >
        5.5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={6.5}
      >
        6.5
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={7.5}
      >
        7.5
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={8.5}
      >
        8.5
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={9.5}
      >
        9.5
      </option>
      <option
        value={10}
      >
        10
      </option>
    </select>
  </div>
  <div
    className="sc-chPdSV ifgDvI"
  />
  <footer
    className="sc-kgoBCf bYtNgI"
  >
    <img
      alt="tmdb logo"
      className="sc-kGXeez bWwPEQ"
      src="tmdb-logo.png"
    />
    <div
      className="sc-kpOJdX bsNBXO"
    >
      This product uses the TMDb API but is not endorsed or certified by TMDb.
    </div>
  </footer>
</main>
`;

exports[`Main component should match snapshot with movie data 1`] = `
<main>
  <div
    className="sc-dnqmqq ewDSjv"
  >
    Movies now playing
  </div>
  <div>
    <label>
      Choose a minimum rating: 
    </label>
    <select
      className="sc-iwsKbI gwNExv"
      onChange={[Function]}
      value={0}
    >
      <option
        value="0"
      >
        none
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={5.5}
      >
        5.5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={6.5}
      >
        6.5
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={7.5}
      >
        7.5
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={8.5}
      >
        8.5
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={9.5}
      >
        9.5
      </option>
      <option
        value={10}
      >
        10
      </option>
    </select>
  </div>
  <div
    className="sc-gqjmRU etoXPi"
  >
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Fifty Shades Freed"
        src="http://image.tmdb.org/t/p/w200//jjPJ4s3DWZZvI4vw8Xfi4Vqa1Q8.jpg"
        width="200"
      />
      <h3>
        Fifty Shades Freed
      </h3>
      <div>
        Rating: 
        6.1
      </div>
      <div>
        Review Count: 
        1097
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Black Panther"
        src="http://image.tmdb.org/t/p/w200//uxzzxijgPIY7slzFvMotPv8wjKA.jpg"
        width="200"
      />
      <h3>
        Black Panther
      </h3>
      <div>
        Rating: 
        7.4
      </div>
      <div>
        Review Count: 
        3477
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Coco"
        src="http://image.tmdb.org/t/p/w200//eKi8dIrr8voobbaGzDpe8w0PVbC.jpg"
        width="200"
      />
      <h3>
        Coco
      </h3>
      <div>
        Rating: 
        7.8
      </div>
      <div>
        Review Count: 
        3404
      </div>
    </div>
    <div
      className="MovieGridItem sc-gZMcBi imdaMP"
    >
      <img
        alt="Tomb Raider"
        src="http://image.tmdb.org/t/p/w200//ePyN2nX9t8SOl70eRW47Q29zUFO.jpg"
        width="200"
      />
      <h3>
        Tomb Raider
      </h3>
      <div>
        Rating: 
        6.1
      </div>
      <div>
        Review Count: 
        588
      </div>
    </div>
  </div>
  <footer
    className="sc-VigVT jFONBY"
  >
    <img
      alt="tmdb logo"
      className="sc-jTzLTM bCMSoG"
      src="tmdb-logo.png"
    />
    <div
      className="sc-fjdhpX hfzrgR"
    >
      This product uses the TMDb API but is not endorsed or certified by TMDb.
    </div>
  </footer>
</main>
`;

exports[`Main component should select a min rating 1`] = `
<main>
  <div
    className="sc-dxgOiQ pGijw"
  >
    Movies now playing
  </div>
  <div>
    <label>
      Choose a minimum rating: 
    </label>
    <select
      className="sc-ckVGcZ ccYMdj"
      onChange={[Function]}
      value={0}
    >
      <option
        value="0"
      >
        none
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={5.5}
      >
        5.5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={6.5}
      >
        6.5
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={7.5}
      >
        7.5
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={8.5}
      >
        8.5
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={9.5}
      >
        9.5
      </option>
      <option
        value={10}
      >
        10
      </option>
    </select>
  </div>
  <div
    className="sc-eNQAEJ fCssbo"
  />
  <footer
    className="sc-hMqMXs qbXhT"
  >
    <img
      alt="tmdb logo"
      className="sc-kEYyzF iArugn"
      src="tmdb-logo.png"
    />
    <div
      className="sc-kkGfuU jlULYF"
    >
      This product uses the TMDb API but is not endorsed or certified by TMDb.
    </div>
  </footer>
</main>
`;

exports[`Main component should select a min rating 2`] = `
<main>
  <div
    className="sc-iAyFgw kNeyEc"
  >
    Movies now playing
  </div>
  <div>
    <label>
      Choose a minimum rating: 
    </label>
    <select
      className="sc-hSdWYo ifeOWd"
      onChange={[Function]}
      value={7}
    >
      <option
        value="0"
      >
        none
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={5.5}
      >
        5.5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={6.5}
      >
        6.5
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={7.5}
      >
        7.5
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={8.5}
      >
        8.5
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={9.5}
      >
        9.5
      </option>
      <option
        value={10}
      >
        10
      </option>
    </select>
  </div>
  <div
    className="sc-cvbbAY dQHQdj"
  />
  <footer
    className="sc-jWBwVP lmeZLl"
  >
    <img
      alt="tmdb logo"
      className="sc-brqgnP devwwz"
      src="tmdb-logo.png"
    />
    <div
      className="sc-cMljjf bweLaX"
    >
      This product uses the TMDb API but is not endorsed or certified by TMDb.
    </div>
  </footer>
</main>
`;
